# fastapi-fps

./: Makefile  README.md  asgi.py  mypy.ini  pyproject.toml
fps_src/: app.py
fps_src/config/: __init__.py  settings.toml
fps_src/core/: __init__.py
fps_src/core/dependecies/: __init__.py
fps_src/core/models/: __init__.py  token.py  user.py
fps_src/core/models/requests/: user.py
fps_src/core/repositories/: __init__.py  base.py  user.py
fps_src/core/security/: __init__.py  scheme.py  token.py  user.py
fps_src/core/services/: __init__.py  hashing.py  user.py
fps_src/exceptions/: __init__.py
fps_src/infra/database/: base.py  config.py  user.py
fps_src/routes/: __init__.py
fps_src/routes/user/: __init__.py
tests/: conftest.py  test_app.py
